[project]
name = "ezmsg-hue"
version = "0.1.0"
description = "ezmsg integration for Philips Hue lights"
readme = "README.md"
authors = [
    { name = "Griffin Milsap", email = "griffin.milsap@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ezmsg>=3.6.0",
    "hue-api>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "system"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
